# Formula-Forge

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
assets/drivers/standard_driver/: standard_driver.blend  standard_driver.glb  standard_driver.json
assets/tracks/interlagos/: interlagos.json
assets/tracks/silverstone/: silverstone.json
assets/ui/formula_forge_loading/: formula_forge_loading.blend  formula_forge_loading.json
assets/vehicles/formula_dash/: formula_dash.blend  formula_dash.glb
assets/vehicles/formula_fiery/: formula_fiery.json
assets/vehicles/formula_macl/: formula_macl.blend  formula_macl.json
assets/vehicles/formula_marc/: formula_marc.blend  formula_marc.json
assets/vehicles/formula_rb/: formula_rb.glb
assets_src/drivers/bea_torque/: bea_torque.blend  bea_torque.glb  bea_torque.json
assets_src/drivers/dax_calder/: dax_calder.blend  dax_calder.glb  dax_calder.json
assets_src/drivers/imani_reef/: imani_reef.blend  imani_reef.glb  imani_reef.json
assets_src/drivers/niko_brass/: niko_brass.blend  niko_brass.glb  niko_brass.json
assets_src/drivers/sol_vega/: sol_vega.blend  sol_vega.glb  sol_vega.json
assets_src/drivers/standard_driver/: standard_driver.blend  standard_driver.glb  standard_driver.json
assets_src/tracks/interlagos/: interlagos.blend  interlagos.glb  interlagos.json
assets_src/tracks/monza/: monza.blend  monza.glb  monza.json
assets_src/tracks/silverstone/: silverstone.blend  silverstone.glb  silverstone.json
assets_src/tracks/spa/: spa.blend  spa.glb  spa.json
assets_src/tracks/sunset_cove/: sunset_cove.blend  sunset_cove.glb  sunset_cove.json
assets_src/tracks/suzuka/: suzuka.blend  suzuka.glb  suzuka.json
assets_src/ui/formula_garage/: formula_garage.blend  formula_garage.json
assets_src/ui/loading_screen/: loading_screen.blend  loading_screen.json
assets_src/vehicles/boardwalk/: boardwalk.blend  boardwalk.glb  boardwalk.json
assets_src/vehicles/formula_dash/: formula_dash.json
assets_src/vehicles/formula_fiery/: formula_fiery.blend  formula_fiery.glb  formula_fiery.json
assets_src/vehicles/formula_macl/: formula_macl.glb  formula_macl.json
assets_src/vehicles/formula_marc/: formula_marc.glb  formula_marc.json
assets_src/vehicles/formula_rb/: formula_rb.blend  formula_rb.json
assets_src/vehicles/reefrunner/: reefrunner.blend  reefrunner.glb  reefrunner.json
assets_src/vehicles/sunskipper/: sunskipper.blend  sunskipper.glb  sunskipper.json
assets_src/vehicles/tidebreaker/: tidebreaker.blend  tidebreaker.glb  tidebreaker.json
docs/: agent_play_protocol.md  demo_video_script.md  youtube_description.md
scripts/: bootstrap_deps.sh  bootstrap_raylib.sh
src/: agent_play_protocol.cpp  agent_play_protocol.hpp  arcade_audio.cpp  arcade_audio.hpp  arcade_hud.cpp  arcade_hud.hpp  arcade_race.cpp  arcade_race.hpp  arcade_render.cpp  arcade_render.hpp  arcade_vehicle.cpp  arcade_vehicle.hpp  core_math.hpp  formula_forge.cpp  formula_forge.hpp  formula_forge_legacy.cpp  formula_forge_legacy_main.cpp  formula_forge_main.cpp  game.cpp  glb_asset.cpp  glb_asset.hpp  harbor_karts.cpp  harbor_karts_3d.cpp  harbor_karts_3d.hpp  main.cpp  main3d.cpp  renderer.hpp  track_catalog.cpp  track_catalog.hpp  track_layout.hpp  track_renderer.cpp  track_renderer.hpp
tools/: ASSET_PIPELINE.md  README.md
tools/blender/generators/: asset_helpers.py  generate_drivers.py  generate_formula_garage.py  generate_loading_screen.py  generate_vehicles.py  verify_assets.py
tools/blender/tracks/: README.md  generate_tracks.py  verify_tracks.py
tools/formula_assets/: __init__.py  generators.py
